# api-testing-samples

./: README.md
docs/: proper_curl.md
docs/bug_reports/: bugs.md
docs/test_cases/: test_cases.md
docs/test_plan/: plan.md
test_automation/: pyproject.toml
test_automation/hash_src/: get_hashed.py  get_stats.py  hash_pass.py
test_automation/tests/: test_hash_app.py
tools/: spam_reqs.py
