[tool.poetry]
name = "test_automation"
version = "0.1.0"
description = ""
authors = ["Dmitrii Kilishek <dgkilishek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
